src/objects/X1_2_1_Head_Office_Form__c.object
<CustomObject>
    <description>For use by staff at Head Office to complete their 121 forms</description>
    <fields>
        <fullName>Actions_From_1_2_1__c</fullName>
        <label>Actions From 1-2-1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Actions_From_Previous_1_2_1__c</fullName>
        <label>Actions From Previous 1-2-1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_1_2_1_Completed__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date 1-2-1 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_on_brand_behaviours__c</fullName>
        <label>Feedback on brand behaviours</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GoalGoal_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>To view a list of all your objectives, go to reports and search for &apos;my goals&apos; https://eu1.salesforce.com/00OD0000006PTnS. Copy and paste the name of your objective into this box and click the search icon. Then click on the link.</inlineHelpText>
        <label>Objective 1(Goal)</label>
        <referenceTo>Goal</referenceTo>
        <relationshipLabel>Goal 1-2-1 Head Office Forms (Goal 1)(Goal)</relationshipLabel>
        <relationshipName>X121_Head_Office_Goal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GoalGoal_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective 2(Goal)</label>
        <referenceTo>Goal</referenceTo>
        <relationshipLabel>Goal 121 Head Office Forms (Goal 2)(Goal)</relationshipLabel>
        <relationshipName>X121_Head_Office_Forms_Goal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GoalGoal_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective 3(Goal)</label>
        <referenceTo>Goal</referenceTo>
        <relationshipLabel>Goal 121 Head Office Forms (Goal 3)(Goal)</relationshipLabel>
        <relationshipName>X121_Head_Office_Forms1_Goal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GoalObjective_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective 10(Goal)</label>
        <referenceTo>Goal</referenceTo>
        <relationshipLabel>Goal 1-2-1 Head Office Forms (Objective 10)(Goal)</relationshipLabel>
        <relationshipName>X1_2_1_Head_Office_Forms3_Goal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GoalObjective_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective 11(Goal)</label>
        <referenceTo>Goal</referenceTo>
        <relationshipLabel>Goal 1-2-1 Head Office Forms (Objective 11)(Goal)</relationshipLabel>
        <relationshipName>X1_2_1_Head_Office_Forms4_Goal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GoalObjective_12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective 12(Goal)</label>
        <referenceTo>Goal</referenceTo>
        <relationshipLabel>Goal 1-2-1 Head Office Forms (Objective 12)(Goal)</relationshipLabel>
        <relationshipName>X1_2_1_Head_Office_Forms5_Goal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goal_1_Actions_Undertaken__c</fullName>
        <label>Objective 1 Actions Undertaken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_2_Actions_Undertaken__c</fullName>
        <label>Objective 2 Actions Undertaken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_3_Actions_Undertaken__c</fullName>
        <label>Objective 3 Actions Undertaken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Individual_Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual Related To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>X121_Head_Office1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issues_since_last_meeting__c</fullName>
        <label>Issues since last meeting</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Line_Managers_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Managers Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>X121_Head_Office</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Managers_end_of_year_comments__c</fullName>
        <label>Managers end of year comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MetricGoal_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>To view a list of all your objectives, go to reports and search for &apos;my goals&apos; https://eu1.salesforce.com/00OD0000006PTnS. Copy and paste the name of your objective into this box and click the search icon. Then click on the link.</inlineHelpText>
        <label>Objective 1(Metric)</label>
        <referenceTo>Metric</referenceTo>
        <relationshipLabel>Metric 1-2-1 Head Office Forms (Goal 1)(Metric)</relationshipLabel>
        <relationshipName>X121_Head_Office_Metric</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MetricGoal_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective 2(Metric)</label>
        <referenceTo>Metric</referenceTo>
        <relationshipLabel>Metric 121 Head Office Forms (Goal 2)(Metric)</relationshipLabel>
        <relationshipName>X121_Head_Office_Forms_Metric</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MetricGoal_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective 3(Metric)</label>
        <referenceTo>Metric</referenceTo>
        <relationshipLabel>Metric 121 Head Office Forms (Goal 3)(Metric)</relationshipLabel>
        <relationshipName>X121_Head_Office_Forms1_Metric</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MetricObjective_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective 10(Metric)</label>
        <referenceTo>Metric</referenceTo>
        <relationshipLabel>Metric 1-2-1 Head Office Forms (Objective 10)(Metric)</relationshipLabel>
        <relationshipName>X1_2_1_Head_Office_Forms3_Metric</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MetricObjective_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective 11(Metric)</label>
        <referenceTo>Metric</referenceTo>
        <relationshipLabel>Metric 1-2-1 Head Office Forms (Objective 11)(Metric)</relationshipLabel>
        <relationshipName>X1_2_1_Head_Office_Forms4_Metric</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MetricObjective_12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective 12(Metric)</label>
        <referenceTo>Metric</referenceTo>
        <relationshipLabel>Metric 1-2-1 Head Office Forms (Objective 12)(Metric)</relationshipLabel>
        <relationshipName>X1_2_1_Head_Office_Forms5_Metric</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Mandatory_CBT_on_Schedule__c</fullName>
        <label>Monthly Mandatory CBT on Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Days_Sickness__c</fullName>
        <label>No. Days Sickness</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Occasions__c</fullName>
        <label>No. Occasions Lateness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective_10_Actions_Undertaken__c</fullName>
        <label>Objective 10 Actions Undertaken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_11_Actions_Undertaken__c</fullName>
        <label>Objective 11 Actions Undertaken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_12_Actions_Undertaken__c</fullName>
        <label>Objective 12 Actions Undertaken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Activities_Undertaken_During_Perio__c</fullName>
        <label>Activities, Feedback &amp; Recognition</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Development_Actions_Taken__c</fullName>
        <label>Other Development Actions Taken</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Performance_Month_Reviewed__c</fullName>
        <label>Performance Month Reviewed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>March 2014</fullName>
                </value>
                <value>
                    <fullName>April 2014</fullName>
                </value>
                <value>
                    <fullName>May 2014</fullName>
                </value>
                <value>
                    <fullName>June 2014</fullName>
                </value>
                <value>
                    <fullName>July 2014</fullName>
                </value>
                <value>
                    <fullName>August 2014</fullName>
                </value>
                <value>
                    <fullName>September 2014</fullName>
                </value>
                <value>
                    <fullName>October 2014</fullName>
                </value>
                <value>
                    <fullName>November 2014</fullName>
                </value>
                <value>
                    <fullName>December 2014</fullName>
                </value>
                <value>
                    <fullName>Half Year 2014</fullName>
                </value>
                <value>
                    <fullName>2014 End of year review</fullName>
                </value>
                <value>
                    <fullName>January 2015</fullName>
                </value>
                <value>
                    <fullName>February 2015</fullName>
                </value>
                <value>
                    <fullName>March 2015</fullName>
                </value>
                <value>
                    <fullName>April 2015</fullName>
                </value>
                <value>
                    <fullName>May 2015</fullName>
                </value>
                <value>
                    <fullName>June 2015</fullName>
                </value>
                <value>
                    <fullName>July 2015</fullName>
                </value>
                <value>
                    <fullName>2015 PDP Objective Setting</fullName>
                </value>
                <value>
                    <fullName>August 2015</fullName>
                </value>
                <value>
                    <fullName>September 2015</fullName>
                </value>
                <value>
                    <fullName>October 2015</fullName>
                </value>
                <value>
                    <fullName>November 2015</fullName>
                </value>
                <value>
                    <fullName>December 2015</fullName>
                </value>
                <value>
                    <fullName>End of year review 2015</fullName>
                </value>
                <value>
                    <fullName>Objective setting 2016</fullName>
                </value>
                <value>
                    <fullName>January 2016</fullName>
                </value>
                <value>
                    <fullName>February 2016</fullName>
                </value>
                <value>
                    <fullName>March 2016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_related_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For use by Contact Centre only to link to the person record</inlineHelpText>
        <label>Person related to</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>1-2-1 Head Office Forms</relationshipLabel>
        <relationshipName>X1_2_1_Head_Office_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeds</fullName>
                </value>
                <value>
                    <fullName>Achieves</fullName>
                </value>
                <value>
                    <fullName>Partially achieves</fullName>
                </value>
                <value>
                    <fullName>Below</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_of_Individual__c</fullName>
        <label>Role of Individual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_member_end_of_year_comments__c</fullName>
        <label>Staff member end of year comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Staffing_Issues_Personnel_Admin__c</fullName>
        <label>Resourcing/People issues</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Successes_since_last_meeting__c</fullName>
        <label>Successes since last meeting</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>X1_2_1_Form_Approved__c</fullName>
        <label>1-2-1 Form Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>1-2-1 Head Office Form</label>
    <listViews>
        <fullName>My_121_s</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Performance_Month_Reviewed__c</columns>
        <filterScope>Mine</filterScope>
        <label>My 121&apos;s</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_internal_users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sultan_s_line_reportees</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Line_Managers_Name__c</columns>
        <columns>Performance_Month_Reviewed__c</columns>
        <columns>Date_1_2_1_Completed__c</columns>
        <columns>X1_2_1_Form_Approved__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>peter,mohamed,iain,keith,samir,sana,julia,claire,Rosamund,Mohammed,Aamir</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Gamil,crawford,leach,alamad,aziz,tarpey,bright,battersby,king,Azam,Shakur</value>
        </filters>
        <label>Sultan&apos;s line reportees</label>
        <language>en_US</language>
        <sharedTo>
            <role>Managing_Director</role>
            <role>Reception</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>1-2-1 Head Office Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>1-2-1 Head Office Forms</pluralLabel>
    <recordTypes>
        <fullName>Manager_121</fullName>
        <active>true</active>
        <description>One to one form for use by managers</description>
        <label>People Managers</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_121</fullName>
        <active>true</active>
        <description>To be used by all non managers</description>
        <label>Staff 121</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2015_End_of_Year_PDP_s</fullName>
        <active>true</active>
        <description>To be used to attach 2015 end of year reviews</description>
        <label>2015 End of Year Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2015_Objective_Setting</fullName>
        <active>true</active>
        <description>To be used to attach objectives for 2015 PDPs</description>
        <label>2015 Objective Setting</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2016_Objective_Setting</fullName>
        <active>true</active>
        <description>To be used to attached objectives for 2016 PDPs</description>
        <label>2016 Objective Setting</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>only_owner_of_goal</fullName>
        <active>false</active>
        <errorConditionFormula>IF(  text(Date_1_2_1_Completed__c)   &lt;&gt;  &apos;&apos;,  $User.Alias  &lt;&gt;  Owner:User.Alias , $User.Alias  =  Owner:User.Alias)</errorConditionFormula>
        <errorMessage>xxx</errorMessage>
    </validationRules>
</CustomObject>